styles.css
/*Elements applying to all content on webpage*/
body {
    font-family: Roboto;
}

button{
    background-color: #3882f6;
    color: #F9FAF8;
    border: none;
    cursor: pointer;
    padding: 12px;

}

header{
    display: flex;
    justify-content: space-between;
    background-color: #1F2937;
}
/*Elements applying to logo of webpage*/
header #logo{
    font-size: 24px;
    align-self: center;
    color: #F9FAF8;
}
/*Elements applying only to the navbar*/
header .navbar{
    list-style-type: none;
    margin-top: 0;
    display: flex;
}
/*Elements applying to navbar links*/
header .navbar li a{
    font-size: 18px;
    color: #E5E7EB;
    text-align: center;
    text-decoration: none;
    padding: 14px 16px;
}

/*Elements applying to content within hero section*/
.hero{
    display: flex;
    background-color: #1F2937;
    margin-top: 0;
}
/*Elements applying to webpage tagline*/
.hero #tagline{
    font-size: 48px;
    color: #F9FAF8;
    font-weight: 900;
}
/*Elements applying to webpage description in hero section*/
.hero #description{
    font-size: 18px;
    color: #E5E7EB;
}
/*Elements applying to image class in hero section*/
.hero .image{
    background-color: gray;
    margin: 15px 10px;
}
/*Elements applying to text in image class*/
.hero .image p{
    color: #E5E7EB;
    text-align: center;
    padding: 15px 10px;
}

/*----------------------------------------------Elements applying to information section---------------------------------------*/
/*Elements applying only to random information header*/
#random_info h3{
    font-size: 36px;
    color: #1F2937;
    font-weight: 900;
    text-align: center;
}

.features {
    display: flex;
    justify-content: center;
}

.festures .div{
    justify-items: center;
}
.features .div .illustration{
    border-color: #3882f6;
    border-style: solid;
    margin: 10px;
    width: 200px;
    height: 200px;
}

.features .div .caption{
    margin: 50px 50px;
}

/*-----------------------------------------------Elements applying to footer section-------------------------------------------*/
footer{
    background-color: #1F2937;
}
/*Elements applying to the copyright text in footer section*/
footer #copyright{
    text-align: center;
    font-size: 18px;
    color: #E5E7EB;
}

